<resources>
    <string name="app_name">Pre Disaster</string>

    <string name="tv_login_title_left">Good·</string>
    <string name="tv_login_title_right">Morning</string>
    <string name="tv_login_title_info">地质灾害预警系统</string>
    <string name="et_login_hint_username">User</string>
    <string name="et_login_hint_pwd">Password</string>
    <string name="bt_login_sign_in">Sign in</string>
    <string name="bt_login_sign_up">Sign up</string>
    <string name="tv_login_corp">GLUT © JiyeHoo</string>
    <string name="tv_login_title_right_morning"> Morning</string>
    <string name="tv_login_title_right_night"> Night</string>
    <string name="tv_sign_up_title">Disaster warn</string>
    <string name="cb_remember_pwd">记住密码</string>
    <string name="tv_login_reset_pwd">忘记密码?</string>
    <string name="tv_reset_pwd_title">Retrieve</string>
    <string name="login_toast_login_string_is_null">请输入合适的账号密码</string>
    <string name="login_my_blog">http://blog.jiyehoo.com:81/</string>
    <string name="login_til_error_username">请输入账号</string>
    <string name="login_til_error_pwd">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败:</string>
    <string name="sign_in_toast_email_error">请输入正确邮箱</string>
    <string name="sign_in_til_email_error">邮箱不能为空</string>
    <string name="sign_in_til_pwd_error">密码不能为空</string>
    <string name="sign_in_til_pwd_error_length">密码长度为6–18位</string>
    <string name="sign_in_til_phone_error_null">手机号不能为空</string>
    <string name="sign_in_til_phone_error_length">请输入正确的手机号</string>
    <string name="sign_in_til_code_error_null">验证码不能为空</string>
    <string name="sign_in_til_code_error_length">请输入正确的验证码</string>
    <string name="country_code">86</string>
    <string name="sign_up_toast_code_error">验证码发送失败:</string>
    <string name="sign_up_toast_code_success">验证码发送成功</string>
    <string name="sign_up_success">注册成功</string>
    <string name="sign_up_error">注册失败:</string>
    <string name="reset_send_code_error">验证码发送失败:</string>
    <string name="reset_send_code_success">验证码发送成功</string>
    <string name="reset_toast_email_error">邮箱不能为空</string>
    <string name="reset_toast_email_error_null">邮箱不能为空</string>
    <string name="reset_toast_pwd_error">密码长度不符合</string>
    <string name="reset_toast_code_error_null">请输入验证码</string>
    <string name="reset_toast_reset_success">密码重置成功</string>
    <string name="reset_toast_reset_error">失败:</string>
    <string name="reset_til_email_error_null">邮箱不能为空</string>
    <string name="reset_til_pwd_error_null">密码不能为空</string>
    <string name="reset_til_pwd_error_length">密码长度为6–18位</string>
    <string name="reset_til_code_error_null">验证码不能为空</string>
    <string name="reset_til_code_error_length">请输入正确的验证码</string>
    <string name="tv_main_title">一起变得更美好！</string>
    <string name="tv_main_one_text">您想要从那个目标开始完成？</string>

</resources>