<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/tv_login_title_left"
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/tv_login_title_right"
                android:textColor="#ffffff"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/tv_login_title_info"
        android:textColor="#9affffff"
        android:textSize="15sp" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SpinKitView.Wave"
        app:SpinKit_Color="@color/white"
        android:visibility="invisible"
        android:layout_below="@+id/login_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">
            <EditText
                android:id="@+id/et_login_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/ic_email_white_24dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/et_login_hint_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">
            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/ic_lock_white_24dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/et_login_hint_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/bt_login_sign_in"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/bt_login_sign_up"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_comp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/tv_login_corp"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
